force-app/main/default/objects/OpportunityHistory__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Histories</relationshipLabel>
    <relationshipName>Opportunity_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>